@@ -73,6 +73,10 @@ Version 7.4  [ (to be announced) ]
             - Optimised so that computed topological properties (e.g., Jones
               and HOMFLY-PT polynomials) are preserved through operations that
               do not change the topology (e.g., Reidemeister moves).
+            - Routine dumpConstruction() can now produce both C++ and Python
+              code via an optional language argument.  Also, fixed a problem
+              where the C++ initialiser lists were empty (instead of containing
+              a single 0) for zero-crossing components.
         Class LockViolation:
             - New exception class used when the user attempts to change a
               locked simplex or facet.
